# token-trail

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: game.py  leaderboard.py  router.py  session.py
backend/app/cache/: __init__.py  branch_cache.py  keys.py
backend/app/core/: config.py  logging.py  middleware.py  step_profile.py
backend/app/data/: qing.json
backend/app/models/: __init__.py  schemas.py
backend/app/services/: corpus.py  corpus_enricher.py  fallback.py  game_step.py  leaderboard.py  mock_llm.py  personality.py  prefetcher.py  result.py  session.py  temperature.py
backend/scripts/: load_test.py  verify_cache_hit.py
backend/tests/: conftest.py  test_api_integration.py  test_cache.py  test_corpus.py  test_e2e_game_flow.py  test_game_step.py  test_leaderboard.py  test_result.py  test_session.py
docs/: design-rationale.md
docs/api/: apidocument.md
docs/prd/: PRD_v6_0622.md  PRD_v7_0630.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: corpus.test.ts  e2eRegression.test.ts  fpsStats.test.ts  gridSpawner.test.ts  personalityDecoder.test.ts  phase2ApiE2e.test.ts  playerName.test.ts  sessionFinalize.test.ts  slidingWindow.test.ts  storyBuilder.test.ts
infra/docker/: docker-compose.yml
infra/prometheus/: prometheus.yml
infra/scripts/: ci-local.ps1  ci-local.sh  (+4 more)
(+37 files in other folders)
